// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> : matches snapshot 1`] = `
<button
  class="pds-Button"
  data-testid="test-button"
  type="button"
>
  Button text
</button>
`;

exports[`<Button /> : matches snapshot as an anchor 1`] = `
<a
  aria-disabled="false"
  class="pds-Button"
  data-testid="test-button"
  href="https://lloyds.com"
>
  Button text
</a>
`;
